--- a/SleepyTime/Base.lproj/Main.storyboard
+++ b/SleepyTime/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
+        <deployment version="4864" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -18,12 +18,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kwY-H9-AMO">
-                                <rect key="frame" x="16" y="737" width="215" height="42"/>
+                                <rect key="frame" x="16" y="739" width="215" height="40"/>
                                 <color key="backgroundColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="146" id="C4f-ie-VNF"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <state key="normal" title="Remind Me">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
@@ -99,8 +99,27 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Npu-DN-rVe">
+                                <rect key="frame" x="267" y="737" width="131" height="42"/>
+                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="42" id="e1M-aQ-8Pi"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="105" id="wNh-Kf-59r"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <state key="normal" title="Turn Off">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="stopNotifications:" destination="BYZ-38-t0r" eventType="touchUpInside" id="n2J-Xx-ge1"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="42Z-dI-FL1">
-                                <rect key="frame" x="378" y="83.5" width="20" height="19"/>
+                                <rect key="frame" x="369" y="80.5" width="29" height="27"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="7Dn-bY-YNY"/>
+                                    <constraint firstAttribute="width" constant="29" id="jZL-ax-HK7"/>
+                                </constraints>
                                 <color key="tintColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <state key="normal" backgroundImage="questionmark.circle" catalog="system">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -110,26 +129,10 @@
                                     <action selector="reportProblem:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Rf-Az-V4b"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Npu-DN-rVe">
-                                <rect key="frame" x="267" y="737" width="131" height="42"/>
-                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="42" id="e1M-aQ-8Pi"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="105" id="wNh-Kf-59r"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="Turn Off">
-                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="stopNotifications:" destination="BYZ-38-t0r" eventType="touchUpInside" id="n2J-Xx-ge1"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" name="backgroundColor"/>
                         <constraints>
                             <constraint firstItem="0f0-66-8uw" firstAttribute="top" secondItem="Gq4-30-Dqq" secondAttribute="bottom" constant="42.5" id="2Rf-Kl-nbg"/>
-                            <constraint firstItem="42Z-dI-FL1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="39" id="4WQ-tk-KET"/>
                             <constraint firstItem="0f0-66-8uw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="4jb-ac-cni"/>
                             <constraint firstItem="Gq4-30-Dqq" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" constant="-4.5" id="6HU-Sy-sAe"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Npu-DN-rVe" secondAttribute="trailing" constant="16" id="8X8-rs-AMA"/>
@@ -137,13 +140,14 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Npu-DN-rVe" secondAttribute="bottom" constant="83" id="GoX-6L-r9H"/>
                             <constraint firstItem="VS9-Mu-MpF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="22" id="NxW-TF-Krh"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="kwY-H9-AMO" secondAttribute="bottom" constant="83" id="QEH-5u-ElW"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="42Z-dI-FL1" secondAttribute="trailing" constant="16" id="Tou-Ep-PyK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Npu-DN-rVe" secondAttribute="trailing" constant="16" id="UCj-qZ-eBT"/>
                             <constraint firstItem="Gq4-30-Dqq" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-64.5" id="VdD-if-cHI"/>
                             <constraint firstItem="Npu-DN-rVe" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" symbolic="YES" id="Wn7-KU-v2f"/>
                             <constraint firstItem="Npu-DN-rVe" firstAttribute="leading" secondItem="kwY-H9-AMO" secondAttribute="trailing" constant="36" id="Wpa-nG-azK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VS9-Mu-MpF" secondAttribute="trailing" constant="16" id="YSC-rF-oYd"/>
+                            <constraint firstItem="42Z-dI-FL1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="36" id="Zoh-3l-Fd2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0f0-66-8uw" secondAttribute="trailing" constant="16" id="eII-25-WOz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="42Z-dI-FL1" secondAttribute="trailing" constant="16" id="mx9-FD-u4y"/>
                             <constraint firstItem="kwY-H9-AMO" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" constant="-83.5" id="ofa-CJ-x2X"/>
                             <constraint firstItem="VS9-Mu-MpF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="ttj-PA-Qht"/>
                             <constraint firstItem="kwY-H9-AMO" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="zt9-Bi-3pn"/>
